tests-integration/fixtures/checking/263_exhaustive_string_partial/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
testPartialHello :: String -> Int
testPartialWorld :: String -> Int
testWildcard :: String -> Int

Types

Diagnostics
warning[MissingPatterns]: Pattern match is not exhaustive. Missing: _
  --> 4:22..5:15
  |
4 | testPartialHello s = case s of
  |                      ^~~~~~~~~
error[NoInstanceFound]: No instance found for: Partial
  --> 3:1..3:34
  |
3 | testPartialHello :: String -> Int
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
warning[MissingPatterns]: Pattern match is not exhaustive. Missing: _
  --> 8:22..9:15
  |
8 | testPartialWorld s = case s of
  |                      ^~~~~~~~~
error[NoInstanceFound]: No instance found for: Partial
  --> 7:1..7:34
  |
7 | testPartialWorld :: String -> Int
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
